# qtlogin

./: .gitmodules  CMakeLists.txt  CMakePresets.json  qtlogin.code-workspace
QtHello/: CMakeLists.txt
QtHello/src/: .gitignore  CmdLine.cpp  CmdLine.hpp  Dialog.cpp  Dialog.hpp  MainWindow.cpp  MainWindow.ui  QtSample.cpp  QtSample.hpp  main.cpp
installers/: qtbase.py  qthttpserver.py  qtsvg.py  qtwayland.py
qt/: .gitignore  CMakeLists.txt  CMakePresets.json  qt_sample.env.model.json
qt/QtHello/: CMakeLists.txt
qt/QtHello/src/: .gitignore  Application.cpp  Application.hpp  CURLStarter.cpp  CURLStarter.hpp  Chunk.cpp  Chunk.hpp  Fetcher.cpp  Fetcher.hpp  FileHandler.cpp  FileHandler.hpp  HomeWidget.cpp  HomeWidget.hpp  HomeWidget.ui  JsonProcessor.cpp  JsonProcessor.hpp  ListenServer.cpp  ListenServer.hpp  LoginWidget.cpp  LoginWidget.hpp  LoginWidget.ui  MainWindow.cpp  MainWindow.hpp  QtListenServer.cpp  QtListenServer.hpp  RawBuffer.cpp  RawBuffer.hpp  TokenContext.cpp  TokenContext.hpp  main.cpp
qt/installers/: jwtcpp.py  libcurl.py  openssl.py  register_keys.py  simdjson.py
qtlogin_next/: .model.env  package-lock.json  package.json  run.ps1
qtlogin_next/app/: page.tsx
qtlogin_next/app/login/[refresh]/[access]/: page.tsx
qtlogin_next/app/login/[service]/[origin]/: page.tsx
qtlogin_next/app/login_output/[provider]/[refresh]/[access]/: page.tsx
qtlogin_next/shared/: validOrigins.ts  validServices.ts
server/: .gitignore  Proposta de Arquitetura - Trabalho de ATR.docx  env_vars_model.ini  requirements.txt
server/Shared/: crypt.py  deltatime.py  domain_exception.py  github_auth.py  google_auth.py  token_gen.py
server/authapp/: urls.py
server/authapp/decorators/: __init__.py  body_validation.py  token_validator.py
server/authapp/migrations/: 0001_initial.py
server/authapp/models/: __init__.py  github_id.py  google_id.py  user.py  user_refresh_token.py
server/authapp/serializers/: __init__.py  github_id.py  google_id.py  user.py  user_refresh_token.py
server/authapp/views/: __init__.py  login_github.py  login_google.py  sample.py  token_routes.py
server/authapp/views/Shared/: github.py  google.py  user.py
server/server/: settings.py  urls.py
